tests/ui/parser/bad-await-body.stderr
error[E0422]: cannot find struct, variant or union type `await` in this scope
  --> $DIR/bad-await-body.rs:2:5
   |
LL |     await{}()
   |     ^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
