tests/ui/parser/bad-await-body.rs
fn main() {
    await{}()
    //~^   ERROR: cannot find struct, variant or union type `await` in this scope
}
